syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

message RegisterRequest {
    string name = 1;
    string qualifier = 2;
    string address = 3;
}

message RegisterResponse {}

message LookupRequest {
    string name = 1;
    string qualifier = 2;
}

message LookupResponse {
    repeated string servers = 1;
}

message DeleteRequest {
    string name = 1;
    string address = 2;
}

message DeleteResponse {}

service NamingServerService {
    rpc register (RegisterRequest) returns (RegisterResponse);
    rpc lookup (LookupRequest) returns (LookupResponse);
    rpc delete (DeleteRequest) returns (DeleteResponse);
}

